--- a/templates/search-results.html
+++ b/templates/search-results.html
@@ -11,21 +11,24 @@
 {% block body %}
 <div class="container">
   <section class="data page-section">
-      <h2>Search results{% if query %} <span class="text--query">{{query}}</span>{% endif %}</h2>
+      <h2>Search results for {% if query %} "{{ query }}" {% endif %}</h2>
 
     {% if no_results %}
         Sorry, no results
     {% else %}
-      <div class="page-subsection">
+      <div class="meta-box">
         {%if candidates %}
             <div class="results-header">
-                <h3>Candidate Results</h3>
-                <a href="candidates?q={{query}}" class="button" data-category="candidates" data-query="{{query}}">View all</a>
+              <label>Candidate Results</label>
+              <input id="main-search" tabindex="0" type="text" name="search"
+                placeholder="Enter a candidate name" autocomplete="off" autocorrect="off" autocapitalize="off"
+                value="{{ query|default('') }}"
+                spellcheck="false">
             </div>
             {% include "partials/candidates-table.html" %}
         {% endif %}
       </div>
-      <div class="page-subsection">
+      <div class="meta-box">
         {% if committees %}
             <div class="results-header">
                 <h3>Committees Results</h3>
